Had to backtrack to find the extra space I had in front of a css selector which was giving me super weird and hard to follow bugs. Needed to revert to a previous version.

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ section {
 
 .statsContainer {
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   align-items: stretch;
   gap: 24px;
 }
@@ -107,12 +107,13 @@ section {
   gap: 16px;
 }
 
-.stats > div {
+.stats>div {
   flex: 1;
   display: flex;
   align-items: center;
   gap: 8px;
 }
+
 .stats div i {
   font-size: 1.4em;
 }
@@ -123,7 +124,7 @@ section {
   min-width: 40px;
 }
 
-.aboutMe h4{
+.aboutMe h4 {
   color: var(--secondary-color);
   line-height: 1.5em;
 }
@@ -132,76 +133,88 @@ section {
   display: flex;
   align-items: center;
   gap: 16px;
-  cursor:pointer;
+  cursor: pointer;
+  width: fit-content;
   margin-right: auto;
-  width:fit-content;
 }
+
 .outreach:hover {
   opacity: 0.7;
 }
 
-.projectContainer{
+.projectContainer {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 48px;
 }
 
-/* .reverse{
-  flex-direction: row-reverse;
-  gap: 12px;
-} */
 
-.headerText{
+.headerText {
   margin-bottom: 24px;
 }
 
-.projectItem{
-  display:flex;
-  /* align-items: center; */
-  gap: 24px;
-}
 
-.reverse{
+.reverse {
   flex-direction: row-reverse;
 }
 
-.projectItem div:first-child{
-  display:flex;
-  flex-direction: column;
+.projectItem {
+  display: flex;
+  align-items: stretch;
   gap: 24px;
 }
 
-.projectItem div p{
-  display:flex;
+.projectItem div:first-child {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+/* .projectItem div p {
+  display: flex;
   flex-direction: column;
   gap: 8px;
-}
+} */
 
-.projectItem div :last-child {
+.projectItem div:last-child {
   aspect-ratio: 16/9;
-  max-width: 100%;
-  min-width: 100%;
-  overflow: hidden;
-  border-radius:8px;
+  max-width:40%;
+  overflow:hidden;
+
 }
 
-.projectItem div :last-child img{
-  display:flex;
+.projectItem div:last-child img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
+/* .linkContainer {
+  display: flex;
+  align-items: center;
+  gap: 24px
+}
+
+.linkItem div {
+  font-size: 1.4em;
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  color: var(--primary-color)
+} */
+
+
 @media (min-width: 640px) {
   .statsContainer {
     flex-direction: row;
   }
- 
+
   .stats {
     gap: 0px;
   }
-  .aboutMe{
+
+  .aboutMe {
     width: 80%;
-    margin-right:auto;
+    margin-right: auto;
   }
 }
